# rbox

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  xmake.lua
benchmarks/compile/fixed_map/integral_key/: custom_kv_pair.cpp  dense.cpp  fully_dense.cpp  fully_dense_int8.cpp  general.cpp  scoped_enum.cpp  sparse.cpp  unscoped_enum.cpp
benchmarks/compile/fixed_map/string_key/: by_hash_search_1.cpp  mid_size_10.cpp  (+15 more)
benchmarks/enum/: enum_cast.cpp  enum_name.cpp  test_cases.hpp
benchmarks/enum/helpers/: consume_output.cpp
docs/: enum.md  fixed_map.md  lookup.md  serializer.md  to_static_storage.md  type_traits.md  utils.md
docs/enum/: enum_cast.md  enum_contains.md  enum_entries.md  enum_flags_cast.md  enum_flags_contains.md  enum_flags_name.md  enum_format.md  enum_hash.md  enum_index.md  enum_json.md  enum_meta_entries.md  enum_name.md  enum_names.md  enum_switch.md  enum_type_name.md  enum_values.md
docs/type_traits/: arithmetic_types.md  class_types.md  cvref.md  enum_types.md  flattenable.md  is_invocable.md  pointer_to_member.md  serializable.md  string_like_types.md  template_instance.md  trivial_types.md  tuple_like_types.md  type_comparison.md  variant_like_types.md
docs/utils/: addressable_member.md  compare.md  concepts.md  ctype.md  define_static_array.md  define_static_string.md  format.md  identifier_naming.md  make_string_view.md  meta_pair.md  meta_span.md  meta_string_view.md  meta_triple.md  meta_tuple.md  meta_utility.md  meta_variant.md  ranges.md  ref_variant.md  string_builder.md  string_encoding.md  trim.md
docs/utils/ctype/: ascii_test.md  case_conversion.md  char_categories.md
docs/utils/functional/: generic_comparison.md  get_ith_alternative.md  get_ith_element.md  integral_comparison.md  tuple_comparison.md
docs/utils/string_encoding/: consume_invalid_sequence.md  decode_code_point.md  encode_code_point.md  escaping.md  utf_convert.md
docs/utils/string_hash/: ascii_ci_bkdr_hash.md  bkdr_hash.md
examples/lookup/: basic_1.cpp  basic_2.cpp  using_filter_function.cpp  using_transformation_to_enum.cpp  using_transformation_to_string.cpp  variant.cpp
include/: rbox.hpp
include/rbox/: enum.hpp  fixed_map.hpp  lookup.hpp  serializer.hpp  to_static_storage.hpp  type_traits.hpp  utils.hpp
include/rbox/enum/: enum_bitwise_operators.hpp  enum_cast.hpp  enum_comparison_operators.hpp  enum_contains.hpp  enum_count.hpp  enum_entries.hpp  enum_entry_order.hpp  enum_flags_cast.hpp  enum_flags_contains.hpp  enum_flags_name.hpp  enum_format.hpp  enum_hash.hpp  enum_index.hpp  enum_json.hpp  enum_meta_entries.hpp  enum_name.hpp  enum_names.hpp  enum_switch.hpp  enum_type_name.hpp  enum_values.hpp
include/rbox/fixed_map/: integral_key.hpp  string_key.hpp
include/rbox/serializer/: dump_to_json_like.hpp  serialize_to_json.hpp
include/rbox/type_traits/: arithmetic_types.hpp  class_types.hpp  cvref.hpp  enum_types.hpp  is_invocable.hpp  pointer_to_member.hpp  serializable_types.hpp  string_like_types.hpp  template_instance.hpp  trivial_types.hpp  tuple_like_types.hpp  type_comparison.hpp  variant_like_types.hpp
include/rbox/utils/: addressable_member.hpp  compare.hpp  concepts.hpp  config.hpp  constant.hpp  ctype.hpp  define_static_array.hpp  define_static_string.hpp  format.hpp  functional.hpp  identifier_naming.hpp  indices_view.hpp  make_string_view.hpp  max_decimal_digits.hpp  meta_pair.hpp  meta_span.hpp  meta_string_view.hpp  meta_triple.hpp  meta_tuple.hpp  meta_utility.hpp  meta_variant.hpp  ranges.hpp  ref_variant.hpp  string_builder.hpp  string_encoding.hpp  string_hash.hpp  trim.hpp  tuple_element.hpp  tuple_size.hpp
scripts/: analyze_stdlib_includes.py  check_ifndef_guards.py  compile_time_comparison.py  compile_time_test.py
tests/: test_to_static_storage.cpp
tests/enum/: flags_test_cases.hpp  test_cases.hpp  test_cases_ci.hpp  test_enum_bitwise_operators.cpp  test_enum_cast_from_integer.cpp  test_enum_cast_from_string.cpp  test_enum_cast_from_string_ci.cpp  test_enum_comparison_operators.cpp  test_enum_contains_integer.cpp  test_enum_contains_string.cpp  test_enum_contains_string_ci.cpp  test_enum_count.cpp  test_enum_entries.cpp  test_enum_flags_cast_from_integer.cpp  test_enum_flags_cast_from_string.cpp  test_enum_flags_cast_from_string_ci.cpp  test_enum_flags_contains_integer.cpp  test_enum_flags_contains_string.cpp  test_enum_flags_contains_string_ci.cpp  test_enum_flags_name.cpp  test_enum_format.cpp  test_enum_hash.cpp  test_enum_index.cpp  test_enum_json.cpp  test_enum_json_static.cpp  test_enum_meta_entries.cpp  test_enum_name.cpp  test_enum_names.cpp  test_enum_switch.cpp  test_enum_type_name.cpp  test_enum_unique_index.cpp  test_enum_values.cpp
tests/enum/impl/: test_enum_flags_category.cpp
tests/fixed_map/: fixed_map_test_options.hpp
tests/fixed_map/integral_key/: integral_key_test_options.hpp  test_custom_kv_pair.cpp  test_dense.cpp  test_empty.cpp  test_fully_dense.cpp  test_fully_dense_int8.cpp  test_general.cpp  test_scoped_enum.cpp  test_sparse.cpp  test_unscoped_enum.cpp
tests/fixed_map/string_key/: string_key_test_options.hpp  test_by_hash_search_1.cpp  test_by_hash_search_2.cpp  test_by_hash_search_3.cpp  test_by_hash_search_with_collision.cpp  test_by_hash_table_1.cpp  test_by_hash_table_2.cpp  test_by_hash_table_3.cpp  test_by_hash_table_4.cpp  test_empty.cpp  test_naive.cpp
tests/lookup/: lookup_test_options.hpp
tests/serializer/: test_dump_to_json_like.cpp  test_serialize_to_json.cpp
tests/type_traits/: test_cvref.cpp  test_enum_types.cpp  test_is_invocable.cpp  test_serializable_types.cpp  test_string_like_types.cpp  test_tuple_like_types.cpp  test_variant_like_types.cpp
tests/type_traits/class_types/: test_ambiguous_inheritance.cpp  test_flattenable_types.cpp  test_flattened_nsdm.cpp
tests/utils/: test_addressable_member.cpp  test_ctype.cpp  test_identifier_naming.cpp  test_meta_alternatives.cpp  test_meta_pair.cpp  test_meta_triple.cpp  test_meta_tuple.cpp  test_meta_variant.cpp  test_ref_variant.cpp  test_string_builder.cpp  test_string_encoding.cpp  test_utility.cpp
(+87 files in other folders)
